compiler/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    CONST
    DEFAULT
    COLON
    CCONST
    AND
    TYPEID
    RBRACKET
    LBRACKET
    OR

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> external_declaration
Rule 2     translation_unit -> translation_unit external_declaration
Rule 3     external_declaration -> function_definition
Rule 4     external_declaration -> statement
Rule 5     function_definition -> type ID LPAREN parameter_declaration_list RPAREN LBRACE statement_list RBRACE
Rule 6     function_definition -> type ID LPAREN parameter_declaration_list RPAREN LBRACE RBRACE
Rule 7     parameter_list -> expression
Rule 8     parameter_list -> parameter_list COMMA expression
Rule 9     parameter_declaration_list -> parameter_declaration
Rule 10    parameter_declaration_list -> parameter_declaration_list COMMA parameter_declaration
Rule 11    parameter_declaration -> type ID
Rule 12    parameter_declaration -> type ID EQUALS assignment_expression
Rule 13    type -> INT
Rule 14    type -> DOUBLE
Rule 15    type -> CHAR
Rule 16    type -> STRING
Rule 17    type -> KEY
Rule 18    type -> BOOLEAN
Rule 19    type -> VOID
Rule 20    statement -> expression_statement
Rule 21    statement -> compound_statement
Rule 22    statement -> declaration_statement
Rule 23    statement -> selection_statement
Rule 24    statement -> iteration_statement
Rule 25    statement -> return_statement
Rule 26    statement -> break_statement
Rule 27    statement -> continue_statement
Rule 28    iteration_statement -> REPEAT LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 29    iteration_statement -> UNTIL LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 30    selection_statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 31    selection_statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 32    declaration_statement -> type ID SEMI
Rule 33    declaration_statement -> type ID EQUALS assignment_expression SEMI
Rule 34    more_declaration -> COMMA ID more_declaration
Rule 35    more_declaration -> COMMA ID EQUALS assignment_expression more_declaration
Rule 36    more_declaration -> empty
Rule 37    compound_statement -> LBRACE RBRACE
Rule 38    compound_statement -> LBRACE statement_list RBRACE
Rule 39    expression_statement -> expression SEMI
Rule 40    expression_statement -> SEMI
Rule 41    expression -> assignment_expression
Rule 42    expression -> LPAREN expression RPAREN
Rule 43    function_expression -> ID LPAREN parameter_list RPAREN
Rule 44    assignment_expression -> ID EQUALS assignment_expression
Rule 45    assignment_expression -> logical_NOT_expression EQUALS assignment_expression
Rule 46    assignment_expression -> logical_NOT_expression
Rule 47    assignment_expression -> function_expression
Rule 48    logical_NOT_expression -> logical_OR_expression
Rule 49    logical_NOT_expression -> LNOT logical_OR_expression
Rule 50    logical_OR_expression -> logical_AND_expression
Rule 51    logical_OR_expression -> logical_OR_expression LOR logical_AND_expression
Rule 52    logical_AND_expression -> equality_expression
Rule 53    logical_AND_expression -> logical_AND_expression LAND equality_expression
Rule 54    equality_expression -> relational_expression
Rule 55    equality_expression -> equality_expression EQ relational_expression
Rule 56    equality_expression -> equality_expression NE relational_expression
Rule 57    relational_expression -> additive_expression
Rule 58    relational_expression -> relational_expression LT additive_expression
Rule 59    relational_expression -> relational_expression GT additive_expression
Rule 60    relational_expression -> relational_expression LE additive_expression
Rule 61    relational_expression -> relational_expression GE additive_expression
Rule 62    additive_expression -> multiplicative_expression
Rule 63    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 64    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 65    multiplicative_expression -> primary_expression
Rule 66    multiplicative_expression -> multiplicative_expression TIMES primary_expression
Rule 67    multiplicative_expression -> multiplicative_expression DIVIDE primary_expression
Rule 68    statement_list -> statement
Rule 69    statement_list -> statement_list statement
Rule 70    primary_expression -> LPAREN expression RPAREN
Rule 71    primary_expression -> constant
Rule 72    primary_expression -> ID
Rule 73    primary_expression -> reserved
Rule 74    primary_expression -> empty
Rule 75    constant -> ICONST
Rule 76    constant -> FCONST
Rule 77    constant -> SCONST
Rule 78    constant -> MINUS ICONST
Rule 79    constant -> TRUE
Rule 80    constant -> FALSE
Rule 81    reserved -> ENTER
Rule 82    reserved -> SPACE
Rule 83    return_statement -> RETURN SEMI
Rule 84    return_statement -> RETURN expression SEMI
Rule 85    break_statement -> BREAK SEMI
Rule 86    continue_statement -> CONTINUE SEMI
Rule 87    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
BOOLEAN              : 18
BREAK                : 85
CCONST               : 
CHAR                 : 15
COLON                : 
COMMA                : 8 10 34 35
CONST                : 
CONTINUE             : 86
DEFAULT              : 
DIVIDE               : 67
DOUBLE               : 14
ELSE                 : 31
ENTER                : 81
EQ                   : 55
EQUALS               : 12 33 35 44 45
FALSE                : 80
FCONST               : 76
GE                   : 61
GT                   : 59
ICONST               : 75 78
ID                   : 5 6 11 12 32 33 34 35 43 44 72
IF                   : 30 31
INT                  : 13
KEY                  : 17
LAND                 : 53
LBRACE               : 5 6 28 29 30 31 31 37 38
LBRACKET             : 
LE                   : 60
LNOT                 : 49
LOR                  : 51
LPAREN               : 5 6 28 29 30 31 42 43 70
LT                   : 58
MINUS                : 64 78
NE                   : 56
OR                   : 
PLUS                 : 63
RBRACE               : 5 6 28 29 30 31 31 37 38
RBRACKET             : 
REPEAT               : 28
RETURN               : 83 84
RPAREN               : 5 6 28 29 30 31 42 43 70
SCONST               : 77
SEMI                 : 32 33 39 40 83 84 85 86
SPACE                : 82
STRING               : 16
TIMES                : 66
TRUE                 : 79
TYPEID               : 
UNTIL                : 29
VOID                 : 19
error                : 

Nonterminals, with rules where they appear

additive_expression  : 57 58 59 60 61 63 64
assignment_expression : 12 33 35 41 44 45
break_statement      : 26
compound_statement   : 21
constant             : 71
continue_statement   : 27
declaration_statement : 22
empty                : 36 74
equality_expression  : 52 53 55 56
expression           : 7 8 28 29 30 31 39 42 70 84
expression_statement : 20
external_declaration : 1 2
function_definition  : 3
function_expression  : 47
iteration_statement  : 24
logical_AND_expression : 50 51 53
logical_NOT_expression : 45 46
logical_OR_expression : 48 49 51
more_declaration     : 34 35
multiplicative_expression : 62 63 64 66 67
parameter_declaration : 9 10
parameter_declaration_list : 5 6 10
parameter_list       : 8 43
primary_expression   : 65 66 67
relational_expression : 54 55 56 58 59 60 61
reserved             : 73
return_statement     : 25
selection_statement  : 23
statement            : 4 68 69
statement_list       : 5 28 29 30 31 31 38 69
translation_unit     : 2 0
type                 : 5 6 11 12 32 33

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_declaration
    (2) translation_unit -> . translation_unit external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . statement
    (5) function_definition -> . type ID LPAREN parameter_declaration_list RPAREN LBRACE statement_list RBRACE
    (6) function_definition -> . type ID LPAREN parameter_declaration_list RPAREN LBRACE RBRACE
    (20) statement -> . expression_statement
    (21) statement -> . compound_statement
    (22) statement -> . declaration_statement
    (23) statement -> . selection_statement
    (24) statement -> . iteration_statement
    (25) statement -> . return_statement
    (26) statement -> . break_statement
    (27) statement -> . continue_statement
    (13) type -> . INT
    (14) type -> . DOUBLE
    (15) type -> . CHAR
    (16) type -> . STRING
    (17) type -> . KEY
    (18) type -> . BOOLEAN
    (19) type -> . VOID
    (39) expression_statement -> . expression SEMI
    (40) expression_statement -> . SEMI
    (37) compound_statement -> . LBRACE RBRACE
    (38) compound_statement -> . LBRACE statement_list RBRACE
    (32) declaration_statement -> . type ID SEMI
    (33) declaration_statement -> . type ID EQUALS assignment_expression SEMI
    (30) selection_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (31) selection_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (28) iteration_statement -> . REPEAT LPAREN expression RPAREN LBRACE statement_list RBRACE
    (29) iteration_statement -> . UNTIL LPAREN expression RPAREN LBRACE statement_list RBRACE
    (83) return_statement -> . RETURN SEMI
    (84) return_statement -> . RETURN expression SEMI
    (85) break_statement -> . BREAK SEMI
    (86) continue_statement -> . CONTINUE SEMI
    (41) expression -> . assignment_expression
    (42) expression -> . LPAREN expression RPAREN
    (44) assignment_expression -> . ID EQUALS assignment_expression
    (45) assignment_expression -> . logical_NOT_expression EQUALS assignment_expression
    (46) assignment_expression -> . logical_NOT_expression
    (47) assignment_expression -> . function_expression
    (48) logical_NOT_expression -> . logical_OR_expression
    (49) logical_NOT_expression -> . LNOT logical_OR_expression
    (43) function_expression -> . ID LPAREN parameter_list RPAREN
    (50) logical_OR_expression -> . logical_AND_expression
    (51) logical_OR_expression -> . logical_OR_expression LOR logical_AND_expression
    (52) logical_AND_expression -> . equality_expression
    (53) logical_AND_expression -> . logical_AND_expression LAND equality_expression
    (54) equality_expression -> . relational_expression
    (55) equality_expression -> . equality_expression EQ relational_expression
    (56) equality_expression -> . equality_expression NE relational_expression
    (57) relational_expression -> . additive_expression
    (58) relational_expression -> . relational_expression LT additive_expression
    (59) relational_expression -> . relational_expression GT additive_expression
    (60) relational_expression -> . relational_expression LE additive_expression
    (61) relational_expression -> . relational_expression GE additive_expression
    (62) additive_expression -> . multiplicative_expression
    (63) additive_expression -> . additive_expression PLUS multiplicative_expression
    (64) additive_expression -> . additive_expression MINUS multiplicative_expression
    (65) multiplicative_expression -> . primary_expression
    (66) multiplicative_expression -> . multiplicative_expression TIMES primary_expression
    (67) multiplicative_expression -> . multiplicative_expression DIVIDE primary_expression
    (70) primary_expression -> . LPAREN expression RPAREN
    (71) primary_expression -> . constant
    (72) primary_expression -> . ID
    (73) primary_expression -> . reserved
    (74) primary_expression -> . empty
    (75) constant -> . ICONST
    (76) constant -> . FCONST
    (77) constant -> . SCONST
    (78) constant -> . MINUS ICONST
    (79) constant -> . TRUE
    (80) constant -> . FALSE
    (81) reserved -> . ENTER
    (82) reserved -> . SPACE
    (87) empty -> .

  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for SEMI resolved as shift
    INT             shift and go to state 44
    DOUBLE          shift and go to state 45
    CHAR            shift and go to state 41
    STRING          shift and go to state 11
    KEY             shift and go to state 50
    BOOLEAN         shift and go to state 37
    VOID            shift and go to state 4
    SEMI            shift and go to state 14
    LBRACE          shift and go to state 32
    IF              shift and go to state 40
    REPEAT          shift and go to state 28
    UNTIL           shift and go to state 19
    RETURN          shift and go to state 3
    BREAK           shift and go to state 47
    CONTINUE        shift and go to state 6
    LPAREN          shift and go to state 35
    ID              shift and go to state 38
    LNOT            shift and go to state 2
    ICONST          shift and go to state 33
    FCONST          shift and go to state 13
    SCONST          shift and go to state 18
    MINUS           shift and go to state 9
    TRUE            shift and go to state 16
    FALSE           shift and go to state 43
    ENTER           shift and go to state 36
    SPACE           shift and go to state 29
    TIMES           reduce using rule 87 (empty -> .)
    DIVIDE          reduce using rule 87 (empty -> .)
    PLUS            reduce using rule 87 (empty -> .)
    LT              reduce using rule 87 (empty -> .)
    GT              reduce using rule 87 (empty -> .)
    LE              reduce using rule 87 (empty -> .)
    GE              reduce using rule 87 (empty -> .)
    EQ              reduce using rule 87 (empty -> .)
    NE              reduce using rule 87 (empty -> .)
    LAND            reduce using rule 87 (empty -> .)
    LOR             reduce using rule 87 (empty -> .)
    EQUALS          reduce using rule 87 (empty -> .)

  ! MINUS           [ reduce using rule 87 (empty -> .) ]
  ! SEMI            [ reduce using rule 87 (empty -> .) ]

    expression_statement           shift and go to state 1
    constant                       shift and go to state 7
    logical_NOT_expression         shift and go to state 26
    break_statement                shift and go to state 5
    reserved                       shift and go to state 30
    iteration_statement            shift and go to state 8
    additive_expression            shift and go to state 10
    external_declaration           shift and go to state 12
    compound_statement             shift and go to state 15
    selection_statement            shift and go to state 17
    return_statement               shift and go to state 20
    continue_statement             shift and go to state 21
    relational_expression          shift and go to state 22
    statement                      shift and go to state 23
    logical_AND_expression         shift and go to state 24
    type                           shift and go to state 25
    translation_unit               shift and go to state 27
    assignment_expression          shift and go to state 46
    multiplicative_expression      shift and go to state 31
    primary_expression             shift and go to state 34
    equality_expression            shift and go to state 39
    function_definition            shift and go to state 42
    declaration_statement          shift and go to state 48
    empty                          shift and go to state 49
    function_expression            shift and go to state 51
    expression                     shift and go to state 52
    logical_OR_expression          shift and go to state 53

state 1

    (20) statement -> expression_statement .

    RBRACE          reduce using rule 20 (statement -> expression_statement .)
    SEMI            reduce using rule 20 (statement -> expression_statement .)
    LBRACE          reduce using rule 20 (statement -> expression_statement .)
    IF              reduce using rule 20 (statement -> expression_statement .)
    REPEAT          reduce using rule 20 (statement -> expression_statement .)
    UNTIL           reduce using rule 20 (statement -> expression_statement .)
    RETURN          reduce using rule 20 (statement -> expression_statement .)
    BREAK           reduce using rule 20 (statement -> expression_statement .)
    CONTINUE        reduce using rule 20 (statement -> expression_statement .)
    LPAREN          reduce using rule 20 (statement -> expression_statement .)
    INT             reduce using rule 20 (statement -> expression_statement .)
    DOUBLE          reduce using rule 20 (statement -> expression_statement .)
    CHAR            reduce using rule 20 (statement -> expression_statement .)
    STRING          reduce using rule 20 (statement -> expression_statement .)
    KEY             reduce using rule 20 (statement -> expression_statement .)
    BOOLEAN         reduce using rule 20 (statement -> expression_statement .)
    VOID            reduce using rule 20 (statement -> expression_statement .)
    ID              reduce using rule 20 (statement -> expression_statement .)
    LNOT            reduce using rule 20 (statement -> expression_statement .)
    ICONST          reduce using rule 20 (statement -> expression_statement .)
    FCONST          reduce using rule 20 (statement -> expression_statement .)
    SCONST          reduce using rule 20 (statement -> expression_statement .)
    MINUS           reduce using rule 20 (statement -> expression_statement .)
    TRUE            reduce using rule 20 (statement -> expression_statement .)
    FALSE           reduce using rule 20 (statement -> expression_statement .)
    ENTER           reduce using rule 20 (statement -> expression_statement .)
    SPACE           reduce using rule 20 (statement -> expression_statement .)
    EQUALS          reduce using rule 20 (statement -> expression_statement .)
    LOR             reduce using rule 20 (statement -> expression_statement .)
    LAND            reduce using rule 20 (statement -> expression_statement .)
    EQ              reduce using rule 20 (statement -> expression_statement .)
    NE              reduce using rule 20 (statement -> expression_statement .)
    LT              reduce using rule 20 (statement -> expression_statement .)
    GT              reduce using rule 20 (statement -> expression_statement .)
    LE              reduce using rule 20 (statement -> expression_statement .)
    GE              reduce using rule 20 (statement -> expression_statement .)
    PLUS            reduce using rule 20 (statement -> expression_statement .)
    TIMES           reduce using rule 20 (statement -> expression_statement .)
    DIVIDE          reduce using rule 20 (statement -> expression_statement .)
    $end            reduce using rule 20 (statement -> expression_statement .)


state 2

    (49) logical_NOT_expression -> LNOT . logical_OR_expression
    (50) logical_OR_expression -> . logical_AND_expression
    (51) logical_OR_expression -> . logical_OR_expression LOR logical_AND_expression
    (52) logical_AND_expression -> . equality_expression
    (53) logical_AND_expression -> . logical_AND_expression LAND equality_expression
    (54) equality_expression -> . relational_expression
    (55) equality_expression -> . equality_expression EQ relational_expression
    (56) equality_expression -> . equality_expression NE relational_expression
    (57) relational_expression -> . additive_expression
    (58) relational_expression -> . relational_expression LT additive_expression
    (59) relational_expression -> . relational_expression GT additive_expression
    (60) relational_expression -> . relational_expression LE additive_expression
    (61) relational_expression -> . relational_expression GE additive_expression
    (62) additive_expression -> . multiplicative_expression
    (63) additive_expression -> . additive_expression PLUS multiplicative_expression
    (64) additive_expression -> . additive_expression MINUS multiplicative_expression
    (65) multiplicative_expression -> . primary_expression
    (66) multiplicative_expression -> . multiplicative_expression TIMES primary_expression
    (67) multiplicative_expression -> . multiplicative_expression DIVIDE primary_expression
    (70) primary_expression -> . LPAREN expression RPAREN
    (71) primary_expression -> . constant
    (72) primary_expression -> . ID
    (73) primary_expression -> . reserved
    (74) primary_expression -> . empty
    (75) constant -> . ICONST
    (76) constant -> . FCONST
    (77) constant -> . SCONST
    (78) constant -> . MINUS ICONST
    (79) constant -> . TRUE
    (80) constant -> . FALSE
    (81) reserved -> . ENTER
    (82) reserved -> . SPACE
    (87) empty -> .

  ! shift/reduce conflict for MINUS resolved as shift
    LPAREN          shift and go to state 54
    ID              shift and go to state 55
    ICONST          shift and go to state 33
    FCONST          shift and go to state 13
    SCONST          shift and go to state 18
    MINUS           shift and go to state 9
    TRUE            shift and go to state 16
    FALSE           shift and go to state 43
    ENTER           shift and go to state 36
    SPACE           shift and go to state 29
    TIMES           reduce using rule 87 (empty -> .)
    DIVIDE          reduce using rule 87 (empty -> .)
    PLUS            reduce using rule 87 (empty -> .)
    LT              reduce using rule 87 (empty -> .)
    GT              reduce using rule 87 (empty -> .)
    LE              reduce using rule 87 (empty -> .)
    GE              reduce using rule 87 (empty -> .)
    EQ              reduce using rule 87 (empty -> .)
    NE              reduce using rule 87 (empty -> .)
    LAND            reduce using rule 87 (empty -> .)
    LOR             reduce using rule 87 (empty -> .)
    EQUALS          reduce using rule 87 (empty -> .)
    SEMI            reduce using rule 87 (empty -> .)
    RPAREN          reduce using rule 87 (empty -> .)
    COMMA           reduce using rule 87 (empty -> .)

  ! MINUS           [ reduce using rule 87 (empty -> .) ]

    constant                       shift and go to state 7
    multiplicative_expression      shift and go to state 31
    empty                          shift and go to state 49
    equality_expression            shift and go to state 39
    primary_expression             shift and go to state 34
    reserved                       shift and go to state 30
    logical_AND_expression         shift and go to state 24
    logical_OR_expression          shift and go to state 56
    additive_expression            shift and go to state 10
    relational_expression          shift and go to state 22

state 3

    (83) return_statement -> RETURN . SEMI
    (84) return_statement -> RETURN . expression SEMI
    (41) expression -> . assignment_expression
    (42) expression -> . LPAREN expression RPAREN
    (44) assignment_expression -> . ID EQUALS assignment_expression
    (45) assignment_expression -> . logical_NOT_expression EQUALS assignment_expression
    (46) assignment_expression -> . logical_NOT_expression
    (47) assignment_expression -> . function_expression
    (48) logical_NOT_expression -> . logical_OR_expression
    (49) logical_NOT_expression -> . LNOT logical_OR_expression
    (43) function_expression -> . ID LPAREN parameter_list RPAREN
    (50) logical_OR_expression -> . logical_AND_expression
    (51) logical_OR_expression -> . logical_OR_expression LOR logical_AND_expression
    (52) logical_AND_expression -> . equality_expression
    (53) logical_AND_expression -> . logical_AND_expression LAND equality_expression
    (54) equality_expression -> . relational_expression
    (55) equality_expression -> . equality_expression EQ relational_expression
    (56) equality_expression -> . equality_expression NE relational_expression
    (57) relational_expression -> . additive_expression
    (58) relational_expression -> . relational_expression LT additive_expression
    (59) relational_expression -> . relational_expression GT additive_expression
    (60) relational_expression -> . relational_expression LE additive_expression
    (61) relational_expression -> . relational_expression GE additive_expression
    (62) additive_expression -> . multiplicative_expression
    (63) additive_expression -> . additive_expression PLUS multiplicative_expression
    (64) additive_expression -> . additive_expression MINUS multiplicative_expression
    (65) multiplicative_expression -> . primary_expression
    (66) multiplicative_expression -> . multiplicative_expression TIMES primary_expression
    (67) multiplicative_expression -> . multiplicative_expression DIVIDE primary_expression
    (70) primary_expression -> . LPAREN expression RPAREN
    (71) primary_expression -> . constant
    (72) primary_expression -> . ID
    (73) primary_expression -> . reserved
    (74) primary_expression -> . empty
    (75) constant -> . ICONST
    (76) constant -> . FCONST
    (77) constant -> . SCONST
    (78) constant -> . MINUS ICONST
    (79) constant -> . TRUE
    (80) constant -> . FALSE
    (81) reserved -> . ENTER
    (82) reserved -> . SPACE
    (87) empty -> .

  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for SEMI resolved as shift
    SEMI            shift and go to state 57
    LPAREN          shift and go to state 35
    ID              shift and go to state 38
    LNOT            shift and go to state 2
    ICONST          shift and go to state 33
    FCONST          shift and go to state 13
    SCONST          shift and go to state 18
    MINUS           shift and go to state 9
    TRUE            shift and go to state 16
    FALSE           shift and go to state 43
    ENTER           shift and go to state 36
    SPACE           shift and go to state 29
    TIMES           reduce using rule 87 (empty -> .)
    DIVIDE          reduce using rule 87 (empty -> .)
    PLUS            reduce using rule 87 (empty -> .)
    LT              reduce using rule 87 (empty -> .)
    GT              reduce using rule 87 (empty -> .)
    LE              reduce using rule 87 (empty -> .)
    GE              reduce using rule 87 (empty -> .)
    EQ              reduce using rule 87 (empty -> .)
    NE              reduce using rule 87 (empty -> .)
    LAND            reduce using rule 87 (empty -> .)
    LOR             reduce using rule 87 (empty -> .)
    EQUALS          reduce using rule 87 (empty -> .)

  ! MINUS           [ reduce using rule 87 (empty -> .) ]
  ! SEMI            [ reduce using rule 87 (empty -> .) ]

    constant                       shift and go to state 7
    assignment_expression          shift and go to state 46
    multiplicative_expression      shift and go to state 31
    logical_NOT_expression         shift and go to state 26
    empty                          shift and go to state 49
    additive_expression            shift and go to state 10
    logical_AND_expression         shift and go to state 24
    relational_expression          shift and go to state 22
    reserved                       shift and go to state 30
    function_expression            shift and go to state 51
    expression                     shift and go to state 58
    logical_OR_expression          shift and go to state 53
    equality_expression            shift and go to state 39
    primary_expression             shift and go to state 34

state 4

    (19) type -> VOID .

    ID              reduce using rule 19 (type -> VOID .)


state 5

    (26) statement -> break_statement .

    RBRACE          reduce using rule 26 (statement -> break_statement .)
    SEMI            reduce using rule 26 (statement -> break_statement .)
    LBRACE          reduce using rule 26 (statement -> break_statement .)
    IF              reduce using rule 26 (statement -> break_statement .)
    REPEAT          reduce using rule 26 (statement -> break_statement .)
    UNTIL           reduce using rule 26 (statement -> break_statement .)
    RETURN          reduce using rule 26 (statement -> break_statement .)
    BREAK           reduce using rule 26 (statement -> break_statement .)
    CONTINUE        reduce using rule 26 (statement -> break_statement .)
    LPAREN          reduce using rule 26 (statement -> break_statement .)
    INT             reduce using rule 26 (statement -> break_statement .)
    DOUBLE          reduce using rule 26 (statement -> break_statement .)
    CHAR            reduce using rule 26 (statement -> break_statement .)
    STRING          reduce using rule 26 (statement -> break_statement .)
    KEY             reduce using rule 26 (statement -> break_statement .)
    BOOLEAN         reduce using rule 26 (statement -> break_statement .)
    VOID            reduce using rule 26 (statement -> break_statement .)
    ID              reduce using rule 26 (statement -> break_statement .)
    LNOT            reduce using rule 26 (statement -> break_statement .)
    ICONST          reduce using rule 26 (statement -> break_statement .)
    FCONST          reduce using rule 26 (statement -> break_statement .)
    SCONST          reduce using rule 26 (statement -> break_statement .)
    MINUS           reduce using rule 26 (statement -> break_statement .)
    TRUE            reduce using rule 26 (statement -> break_statement .)
    FALSE           reduce using rule 26 (statement -> break_statement .)
    ENTER           reduce using rule 26 (statement -> break_statement .)
    SPACE           reduce using rule 26 (statement -> break_statement .)
    EQUALS          reduce using rule 26 (statement -> break_statement .)
    LOR             reduce using rule 26 (statement -> break_statement .)
    LAND            reduce using rule 26 (statement -> break_statement .)
    EQ              reduce using rule 26 (statement -> break_statement .)
    NE              reduce using rule 26 (statement -> break_statement .)
    LT              reduce using rule 26 (statement -> break_statement .)
    GT              reduce using rule 26 (statement -> break_statement .)
    LE              reduce using rule 26 (statement -> break_statement .)
    GE              reduce using rule 26 (statement -> break_statement .)
    PLUS            reduce using rule 26 (statement -> break_statement .)
    TIMES           reduce using rule 26 (statement -> break_statement .)
    DIVIDE          reduce using rule 26 (statement -> break_statement .)
    $end            reduce using rule 26 (statement -> break_statement .)


state 6

    (86) continue_statement -> CONTINUE . SEMI

    SEMI            shift and go to state 59


state 7

    (71) primary_expression -> constant .

    TIMES           reduce using rule 71 (primary_expression -> constant .)
    DIVIDE          reduce using rule 71 (primary_expression -> constant .)
    PLUS            reduce using rule 71 (primary_expression -> constant .)
    MINUS           reduce using rule 71 (primary_expression -> constant .)
    LT              reduce using rule 71 (primary_expression -> constant .)
    GT              reduce using rule 71 (primary_expression -> constant .)
    LE              reduce using rule 71 (primary_expression -> constant .)
    GE              reduce using rule 71 (primary_expression -> constant .)
    EQ              reduce using rule 71 (primary_expression -> constant .)
    NE              reduce using rule 71 (primary_expression -> constant .)
    LAND            reduce using rule 71 (primary_expression -> constant .)
    LOR             reduce using rule 71 (primary_expression -> constant .)
    EQUALS          reduce using rule 71 (primary_expression -> constant .)
    SEMI            reduce using rule 71 (primary_expression -> constant .)
    RPAREN          reduce using rule 71 (primary_expression -> constant .)
    COMMA           reduce using rule 71 (primary_expression -> constant .)


state 8

    (24) statement -> iteration_statement .

    RBRACE          reduce using rule 24 (statement -> iteration_statement .)
    SEMI            reduce using rule 24 (statement -> iteration_statement .)
    LBRACE          reduce using rule 24 (statement -> iteration_statement .)
    IF              reduce using rule 24 (statement -> iteration_statement .)
    REPEAT          reduce using rule 24 (statement -> iteration_statement .)
    UNTIL           reduce using rule 24 (statement -> iteration_statement .)
    RETURN          reduce using rule 24 (statement -> iteration_statement .)
    BREAK           reduce using rule 24 (statement -> iteration_statement .)
    CONTINUE        reduce using rule 24 (statement -> iteration_statement .)
    LPAREN          reduce using rule 24 (statement -> iteration_statement .)
    INT             reduce using rule 24 (statement -> iteration_statement .)
    DOUBLE          reduce using rule 24 (statement -> iteration_statement .)
    CHAR            reduce using rule 24 (statement -> iteration_statement .)
    STRING          reduce using rule 24 (statement -> iteration_statement .)
    KEY             reduce using rule 24 (statement -> iteration_statement .)
    BOOLEAN         reduce using rule 24 (statement -> iteration_statement .)
    VOID            reduce using rule 24 (statement -> iteration_statement .)
    ID              reduce using rule 24 (statement -> iteration_statement .)
    LNOT            reduce using rule 24 (statement -> iteration_statement .)
    ICONST          reduce using rule 24 (statement -> iteration_statement .)
    FCONST          reduce using rule 24 (statement -> iteration_statement .)
    SCONST          reduce using rule 24 (statement -> iteration_statement .)
    MINUS           reduce using rule 24 (statement -> iteration_statement .)
    TRUE            reduce using rule 24 (statement -> iteration_statement .)
    FALSE           reduce using rule 24 (statement -> iteration_statement .)
    ENTER           reduce using rule 24 (statement -> iteration_statement .)
    SPACE           reduce using rule 24 (statement -> iteration_statement .)
    EQUALS          reduce using rule 24 (statement -> iteration_statement .)
    LOR             reduce using rule 24 (statement -> iteration_statement .)
    LAND            reduce using rule 24 (statement -> iteration_statement .)
    EQ              reduce using rule 24 (statement -> iteration_statement .)
    NE              reduce using rule 24 (statement -> iteration_statement .)
    LT              reduce using rule 24 (statement -> iteration_statement .)
    GT              reduce using rule 24 (statement -> iteration_statement .)
    LE              reduce using rule 24 (statement -> iteration_statement .)
    GE              reduce using rule 24 (statement -> iteration_statement .)
    PLUS            reduce using rule 24 (statement -> iteration_statement .)
    TIMES           reduce using rule 24 (statement -> iteration_statement .)
    DIVIDE          reduce using rule 24 (statement -> iteration_statement .)
    $end            reduce using rule 24 (statement -> iteration_statement .)


state 9

    (78) constant -> MINUS . ICONST

    ICONST          shift and go to state 60


state 10

    (57) relational_expression -> additive_expression .
    (63) additive_expression -> additive_expression . PLUS multiplicative_expression
    (64) additive_expression -> additive_expression . MINUS multiplicative_expression

    LT              reduce using rule 57 (relational_expression -> additive_expression .)
    GT              reduce using rule 57 (relational_expression -> additive_expression .)
    LE              reduce using rule 57 (relational_expression -> additive_expression .)
    GE              reduce using rule 57 (relational_expression -> additive_expression .)
    EQ              reduce using rule 57 (relational_expression -> additive_expression .)
    NE              reduce using rule 57 (relational_expression -> additive_expression .)
    LAND            reduce using rule 57 (relational_expression -> additive_expression .)
    LOR             reduce using rule 57 (relational_expression -> additive_expression .)
    EQUALS          reduce using rule 57 (relational_expression -> additive_expression .)
    RPAREN          reduce using rule 57 (relational_expression -> additive_expression .)
    SEMI            reduce using rule 57 (relational_expression -> additive_expression .)
    COMMA           reduce using rule 57 (relational_expression -> additive_expression .)
    PLUS            shift and go to state 61
    MINUS           shift and go to state 62


state 11

    (16) type -> STRING .

    ID              reduce using rule 16 (type -> STRING .)


state 12

    (1) translation_unit -> external_declaration .
